@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.infinispan</groupId>
         <artifactId>infinispan-parent</artifactId>
-        <version>11.0.0-SNAPSHOT</version>
+        <version>11.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -16,7 +16,6 @@
 
     <properties>
         <forkJvmArgs>-Xmx500m ${testjvm.commonArgs}</forkJvmArgs>
-        <testjvm.jigsawArgs></testjvm.jigsawArgs>
     </properties>
 
     <profiles>
@@ -38,48 +37,6 @@
                 <forkJvmArgs>${env.MAVEN_FORK_OPTS}</forkJvmArgs>
             </properties>
         </profile>
-        <profile>
-            <id>jigsaw</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <properties>
-                <!--
-                  java.lang, java.util, java.io, java.lang.invoke, java.lang, reflect, java.util.concurrent, java.time:
-                    core externalizers for JDK types
-                  java.nio, jdk.internal.ref, jdk.internal.misc, sun.nio.ch: Netty, server/hotrod
-                  com.sun.security.sasl: CRAM-MD5 mechanism, server/hotrod
-                  java.text, java.awt.font: XStream, server/rest
-                  java.security: Wildfly, server/integration/*
-                -->
-                <testjvm.jigsawArgs>
-                    -Dsun.reflect.debugModuleAccessChecks=true
-                    --add-opens=java.base/java.lang=ALL-UNNAMED
-                    --add-opens=java.base/java.util=ALL-UNNAMED
-                    --add-opens=java.base/java.io=ALL-UNNAMED
-                    --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
-                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
-                    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-                    --add-opens=java.base/java.time=ALL-UNNAMED
-                    --add-opens=java.base/java.nio=ALL-UNNAMED
-                    --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
-                    --add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
-                    --add-opens=java.base/java.text=ALL-UNNAMED
-                    --add-opens=java.base/java.security=ALL-UNNAMED
-                    --add-exports=jdk.security.jgss/com.sun.security.sasl.gsskerb=ALL-UNNAMED
-                    --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-exports=java.security.sasl/com.sun.security.sasl.digest=ALL-UNNAMED
-                    --add-exports=java.security.sasl/com.sun.security.sasl.ntlm=ALL-UNNAMED
-                    --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
-                    --add-opens=java.management/javax.management=ALL-UNNAMED
-                    --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
-                    --add-opens=java.base/com.sun.crypto.provider=ALL-UNNAMED
-                    --add-modules java.se
-                </testjvm.jigsawArgs>
-            </properties>
-        </profile>
     </profiles>
 
     <build>
@@ -90,7 +47,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
                         <trimStackTrace>false</trimStackTrace>
-                        <argLine>${forkJvmArgs} ${testjvm.jigsawArgs}</argLine>
+                        <argLine>${forkJvmArgs} ${testjvm.jdkSpecificArgs}</argLine>
                     </configuration>
                 </plugin>
             </plugins>
