@@ -5,13 +5,13 @@
    <parent>
       <groupId>org.infinispan</groupId>
       <artifactId>infinispan-build-configuration-parent</artifactId>
-      <version>11.0.0-SNAPSHOT</version>
+      <version>11.0.1-SNAPSHOT</version>
       <relativePath>build-configuration/pom.xml</relativePath>
    </parent>
 
    <groupId>org.infinispan</groupId>
    <artifactId>infinispan-parent</artifactId>
-   <version>11.0.0-SNAPSHOT</version>
+   <version>11.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Infinispan Common Parent</name>
    <description>Infinispan common parent POM module</description>
@@ -119,6 +119,7 @@
       <module>client/rest-client</module>
       <module>client/hotrod-client</module>
       <module>client/infinispan-key-value-store-hotrod</module>
+      <module>archetypes</module>
       <module>all</module>
       <module>all/cli</module>
       <module>osgi</module>
@@ -200,16 +201,19 @@
          --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
          --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
          --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
+         --add-opens=java.base/com.sun.crypto.provider=ALL-UNNAMED
          --add-modules=java.se
       </testjvm.jigsawArgs>
+      <testjvm.blockHoundRedefinitionArgs/>
+      <testjvm.jdkSpecificArgs>${testjvm.jigsawArgs} ${testjvm.blockHoundRedefinitionArgs}</testjvm.jdkSpecificArgs>
       <testjvm.extraArgs/>
-      <forkJvmArgs>-Xmx1G ${testjvm.commonArgs} ${testjvm.extraArgs}</forkJvmArgs>
+      <forkJvmArgs>-Xmx1G ${testjvm.commonArgs} ${testjvm.jdkSpecificArgs} ${testjvm.extraArgs}</forkJvmArgs>
       <server.jvm>${env.JAVA_HOME}</server.jvm>
-      <server.jvm.args>${testjvm.commonArgs} ${testjvm.jigsawArgs} ${testjvm.extraArgs}</server.jvm.args>
+      <server.jvm.args>${testjvm.commonArgs} ${testjvm.jdkSpecificArgs} ${testjvm.extraArgs}</server.jvm.args>
       <infinispan.module-suffix>-${project.artifactId}</infinispan.module-suffix>
       <infinispan.test.jvm.version.regex>^1\.8\.0.*</infinispan.test.jvm.version.regex>
       <ansi.strip/>
-      <infinispan.cluster.stack>udp</infinispan.cluster.stack>
+      <infinispan.cluster.stack>test-udp</infinispan.cluster.stack>
       <infinispan.test.parallel.threads>8</infinispan.test.parallel.threads>
       <server.test.provisioning>thin</server.test.provisioning>
       <skipArtifactUpload>false</skipArtifactUpload>
@@ -244,13 +248,15 @@
       <versionx.com.github.ben-manes.caffeine.caffeine>${version.caffeine}</versionx.com.github.ben-manes.caffeine.caffeine>
       <versionx.com.google.code.gson.gson>${version.gson}</versionx.com.google.code.gson.gson>
       <versionx.com.google.errorprone.error_prone_annotations>2.1.3</versionx.com.google.errorprone.error_prone_annotations>
+      <versionx.com.google.guava.guava>25.0-jre</versionx.com.google.guava.guava>
       <versionx.com.google.testing.compile>0.15</versionx.com.google.testing.compile>
-      <versionx.com.h2database.h2>1.4.193</versionx.com.h2database.h2>
+      <versionx.com.h2database.h2>1.4.200</versionx.com.h2database.h2>
+      <versionx.com.mysqldatabase.mysql>8.0.20</versionx.com.mysqldatabase.mysql>
+      <versionx.com.postgresqldatabase.postgresql>42.2.5</versionx.com.postgresqldatabase.postgresql>
       <versionx.com.microsoft.azure.azure-storage>6.1.0</versionx.com.microsoft.azure.azure-storage>
       <versionx.com.squareup.okhttp3.ohhttp>${version.okhttp}</versionx.com.squareup.okhttp3.ohhttp>
       <versionx.com.sun.tools>1.8.0_161</versionx.com.sun.tools>
       <versionx.com.thoughtworks.xstream.xstream>1.4.11.1</versionx.com.thoughtworks.xstream.xstream>
-      <versionx.commons-codec.commons-codec>1.11</versionx.commons-codec.commons-codec>
       <versionx.commons-dbcp.commons-dbcp>1.4</versionx.commons-dbcp.commons-dbcp>
       <versionx.commons-httpclient.commons-httpclient>3.1</versionx.commons-httpclient.commons-httpclient>
       <versionx.commons-io.commons-io>2.5</versionx.commons-io.commons-io>
@@ -282,12 +288,12 @@
       <versionx.javax.persistence.javax.persistence-api>${version.javax.persistence}</versionx.javax.persistence.javax.persistence-api>
       <versionx.junit.junit>${version.junit}</versionx.junit.junit>
       <versionx.junit.junit5>${version.junit5}</versionx.junit.junit5>
-      <versionx.log4j.log4j>1.2.17</versionx.log4j.log4j>
       <versionx.mysql.mysql-connector-java>5.1.19</versionx.mysql.mysql-connector-java>
       <versionx.net.spy.spymemcached>2.12.1</versionx.net.spy.spymemcached>
       <versionx.org.aesh.aesh>2.6</versionx.org.aesh.aesh>
       <versionx.org.antlr.antlr-runtime>3.5.2</versionx.org.antlr.antlr-runtime>
       <versionx.org.apache.ant.ant>${version.ant}</versionx.org.apache.ant.ant>
+      <versionx.org.apache.avro.avro>1.9.1</versionx.org.apache.avro.avro>
       <versionx.org.apache.commons.commons-lang3>3.9</versionx.org.apache.commons.commons-lang3>
       <versionx.org.apache.commons.commons-math>2.2</versionx.org.apache.commons.commons-math>
       <versionx.org.apache.directory.server.apacheds-all>2.0.0-M24</versionx.org.apache.directory.server.apacheds-all>
@@ -307,10 +313,13 @@
       <versionx.org.apache.lucene.lucene-grouping>${version.lucene}</versionx.org.apache.lucene.lucene-grouping>
       <versionx.org.apache.lucene.lucene-misc>${version.lucene}</versionx.org.apache.lucene.lucene-misc>
       <versionx.org.apache.lucene.lucene-queryparser>${version.lucene}</versionx.org.apache.lucene.lucene-queryparser>
+      <versionx.org.apache.maven.maven-core>3.5.4</versionx.org.apache.maven.maven-core>
       <versionx.org.apache.maven.plugin-tools.maven-plugin-annotations>3.5.1</versionx.org.apache.maven.plugin-tools.maven-plugin-annotations>
       <versionx.org.aspectj.aspectjweaver>1.8.1</versionx.org.aspectj.aspectjweaver>
       <versionx.org.assertj.assertj-core>3.4.1</versionx.org.assertj.assertj-core>
+      <versionx.org.codehaus.plexus.plexus-utils>3.1.0</versionx.org.codehaus.plexus.plexus-utils>
       <versionx.org.codehaus.mojo.versions-maven-plugin>2.7</versionx.org.codehaus.mojo.versions-maven-plugin>
+      <versionx.org.dom4j.dom4j>2.1.3</versionx.org.dom4j.dom4j>
       <versionx.org.eclipse.jetty.jetty-client>${version.jetty}</versionx.org.eclipse.jetty.jetty-client>
       <versionx.org.glassfish.jaxb.jaxb-runtime>${version.glassfish.jaxb}</versionx.org.glassfish.jaxb.jaxb-runtime>
       <versionx.org.hamcrest.hamcrest-core>${version.hamcrest}</versionx.org.hamcrest.hamcrest-core>
@@ -393,7 +402,7 @@
       <versionx.org.springframework.spring-test>${version.spring5}</versionx.org.springframework.spring-test>
       <versionx.org.testcontainers.testcontainers>1.14.0</versionx.org.testcontainers.testcontainers>
       <versionx.org.testng.testng>6.14.3</versionx.org.testng.testng>
-      <versionx.org.twdata.maven.mojo-executor>2.2.0</versionx.org.twdata.maven.mojo-executor>
+      <versionx.org.twdata.maven.mojo-executor>2.3.1</versionx.org.twdata.maven.mojo-executor>
       <versionx.org.wildfly.arquillian.wildfly-arquillian-container-managed>${version.org.wildfly.arquillian}</versionx.org.wildfly.arquillian.wildfly-arquillian-container-managed>
       <versionx.org.wildfly.common.wildfly-common>1.5.1.Final</versionx.org.wildfly.common.wildfly-common>
       <versionx.org.wildfly.core.wildfly-core-testsuite-shared>${version.org.wildfly.core}</versionx.org.wildfly.core.wildfly-core-testsuite-shared>
@@ -450,6 +459,18 @@
             <groupId>com.clearspring.analytics</groupId>
             <artifactId>stream</artifactId>
             <version>${versionx.com.clearspring.analytics.stream}</version>
+         </dependency>
+         <!-- Bump maven-core version. Dependency of org.twdata.maven:mojo-executor -->
+         <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+            <version>${versionx.org.apache.maven.maven-core}</version>
+         </dependency>
+         <!-- Override dependency version to use the same version everywhere -->
+         <dependency>
+            <groupId>org.codehaus.plexus</groupId>
+            <artifactId>plexus-utils</artifactId>
+            <version>${versionx.org.codehaus.plexus.plexus-utils}</version>
          </dependency>
          <dependency>
             <groupId>com.esotericsoftware</groupId>
@@ -508,6 +529,12 @@
             <artifactId>error_prone_annotations</artifactId>
             <version>${versionx.com.google.errorprone.error_prone_annotations}</version>
          </dependency>
+         <!-- use the same Guava dependency everywhere -->
+         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${versionx.com.google.guava.guava}</version>
+         </dependency>
          <dependency>
             <groupId>com.google.testing.compile</groupId>
             <artifactId>compile-testing</artifactId>
@@ -543,11 +570,6 @@
             <groupId>com.thoughtworks.xstream</groupId>
             <artifactId>xstream</artifactId>
             <version>${versionx.com.thoughtworks.xstream.xstream}</version>
-         </dependency>
-         <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>${versionx.commons-codec.commons-codec}</version>
          </dependency>
          <dependency>
             <groupId>commons-dbcp</groupId>
@@ -759,12 +781,6 @@
             <version>${versionx.junit.junit5}</version>
          </dependency>
          <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>${versionx.log4j.log4j}</version>
-            <scope>test</scope>
-         </dependency>
-         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${versionx.mysql.mysql-connector-java}</version>
@@ -795,6 +811,12 @@
             <artifactId>ant</artifactId>
             <version>${versionx.org.apache.ant.ant}</version>
             <scope>provided</scope>
+         </dependency>
+         <!-- Dependency of org.hibernate:hibernate-search-serialization-avro. Overwrite version to 1.9.1 -->
+         <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>${versionx.org.apache.avro.avro}</version>
          </dependency>
          <dependency>
             <groupId>org.apache.commons</groupId>
@@ -919,6 +941,12 @@
             <artifactId>assertj-core</artifactId>
             <version>${versionx.org.assertj.assertj-core}</version>
             <scope>test</scope>
+         </dependency>
+         <!-- Dependency of org.hibernate:hibernate-core. Overwrite verison to 2.1.3 -->
+         <dependency>
+            <groupId>org.dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>${versionx.org.dom4j.dom4j}</version>
          </dependency>
          <dependency>
             <groupId>org.eclipse.jetty</groupId>
@@ -1643,6 +1671,11 @@
          </dependency>
          <dependency>
             <groupId>org.wildfly.openssl</groupId>
+            <artifactId>wildfly-openssl</artifactId>
+            <version>${version.org.wildfly.openssl}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.wildfly.openssl</groupId>
             <artifactId>wildfly-openssl-linux-x86_64</artifactId>
             <version>${versionx.org.wildfly.openssl.wildfly-openssl-linux-x86_64}</version>
          </dependency>
@@ -1894,7 +1927,7 @@
                      <ansi.strip>${ansi.strip}</ansi.strip>
                      <com.arjuna.ats.arjuna.common.propertiesFile>test-jbossts-properties.xml</com.arjuna.ats.arjuna.common.propertiesFile>
                   </systemPropertyVariables>
-                  <argLine>${forkJvmArgs} ${testjvm.jigsawArgs}</argLine>
+                  <argLine>${forkJvmArgs} ${testjvm.jdkSpecificArgs}</argLine>
                </configuration>
             </plugin>
             <plugin>
@@ -1947,6 +1980,11 @@
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${version.maven.jar}</version>
+               <configuration>
+                  <archive>
+                     <index>false</index>
+                  </archive>
+               </configuration>
             </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
@@ -2302,7 +2340,7 @@
                   <usedefaultlisteners>false</usedefaultlisteners>
                   <listener>${testNGListeners}</listener>
                </properties>
-               <argLine>${forkJvmArgs} ${testjvm.jigsawArgs} -Djdk.attach.allowAttachSelf=true</argLine>
+               <argLine>${forkJvmArgs} ${testjvm.jdkSpecificArgs} -Djdk.attach.allowAttachSelf=true</argLine>
             </configuration>
          </plugin>
          <plugin>
@@ -2631,7 +2669,11 @@
          <properties>
             <server.jvm>${env.JAVA8_HOME}</server.jvm>
             <server.jvm.args>${testjvm.commonArgs} ${testjvm.extraArgs}</server.jvm.args>
+            <!-- Unset all JDK-specific properties -->
             <testjvm.jigsawArgs/>
+            <testjvm.blockHoundRedefinitionArgs/>
+            <!-- Also unset the aggregate property, just in case -->
+            <testjvm.jdkSpecificArgs/>
          </properties>
          <dependencies>
             <dependency>
@@ -2655,9 +2697,11 @@
                      </systemProperties>
                   </configuration>
                   <executions>
+                     <!--
+                     Explicitly disable the java8-test execution defined in the jboss-parent POM
+                     -->
                      <execution>
-                        <!-- Do not run the JDK11-specific tests with JDK8 -->
-                        <id>java11-test</id>
+                        <id>java8-test</id>
                         <phase>none</phase>
                      </execution>
                   </executions>
@@ -2679,10 +2723,10 @@
       <profile>
          <id>java13-test</id>
          <activation>
-            <jdk>[13,</jdk>
+            <jdk>[13,)</jdk>
          </activation>
          <properties>
-            <testjvm.extraArgs>-XX:+AllowRedefinitionToAddDeleteMethods</testjvm.extraArgs>
+            <testjvm.blockHoundRedefinitionArgs>-XX:+AllowRedefinitionToAddDeleteMethods</testjvm.blockHoundRedefinitionArgs>
          </properties>
       </profile>
       <profile>
@@ -3153,4 +3197,3 @@
       </profile>
    </profiles>
 </project>
-
